--- a/ProyectoTLS/src/inf/pucp/edu/pe/vista/simulacion/MenuPrincipalSimulacion.form
+++ b/ProyectoTLS/src/inf/pucp/edu/pe/vista/simulacion/MenuPrincipalSimulacion.form
@@ -28,9 +28,6 @@
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="2"/>
-    <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-      <Connection code="new Dimension(1024, 768)&#xd;&#xa;" type="code"/>
-    </Property>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -79,14 +76,14 @@
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="btnReanudar" min="-2" pref="37" max="-2" attributes="0"/>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
-                  <Component id="lblCantidadSemaforos" min="-2" max="-2" attributes="0"/>
+                  <Component id="lblSemaforos" min="-2" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="81" max="-2" attributes="0"/>
-                  <Component id="lblCantidadVehiculos" min="-2" max="-2" attributes="0"/>
+                  <Component id="lblVehiculos" min="-2" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="88" max="-2" attributes="0"/>
                   <Component id="lblEscala" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="52" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="42" max="-2" attributes="0"/>
                   <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace pref="69" max="32767" attributes="0"/>
+                  <EmptySpace pref="86" max="32767" attributes="0"/>
                   <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="btnReducirZoom" min="-2" max="-2" attributes="0"/>
@@ -109,8 +106,8 @@
                           <Component id="btnReducirZoom" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="btnAumentarZoom" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="jLabel1" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="lblCantidadSemaforos" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="lblCantidadVehiculos" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="lblSemaforos" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="lblVehiculos" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="lblEscala" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="jLabel2" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
@@ -198,7 +195,7 @@
             <Property name="text" type="java.lang.String" value="Zoom"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JLabel" name="lblCantidadSemaforos">
+        <Component class="javax.swing.JLabel" name="lblSemaforos">
           <Properties>
             <Property name="text" type="java.lang.String" value="#Semaforos : "/>
           </Properties>
@@ -206,7 +203,7 @@
             <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
           </AuxValues>
         </Component>
-        <Component class="javax.swing.JLabel" name="lblCantidadVehiculos">
+        <Component class="javax.swing.JLabel" name="lblVehiculos">
           <Properties>
             <Property name="text" type="java.lang.String" value="#Vehiculos :"/>
           </Properties>
@@ -234,7 +231,7 @@
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel2">
           <Properties>
-            <Property name="text" type="java.lang.String" value="V.Promedio :"/>
+            <Property name="text" type="java.lang.String" value="VPromedio:"/>
           </Properties>
         </Component>
       </SubComponents>
