--- a/ProyectoTLS/src/inf/pucp/edu/pe/vista/simulacion/MenuPrincipalSimulacion_1.form
+++ b/ProyectoTLS/src/inf/pucp/edu/pe/vista/simulacion/MenuPrincipalSimulacion_1.form
@@ -28,9 +28,6 @@
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="2"/>
-    <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-      <Connection code="new Dimension(1024, 768)&#xd;&#xa;" type="code"/>
-    </Property>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -79,14 +76,14 @@
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="btnReanudar" min="-2" pref="37" max="-2" attributes="0"/>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
-                  <Component id="lblCantidadSemaforos1" min="-2" max="-2" attributes="0"/>
+                  <Component id="lblSemaforos1" min="-2" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="81" max="-2" attributes="0"/>
-                  <Component id="lblCantidadVehiculos1" min="-2" max="-2" attributes="0"/>
+                  <Component id="lblVehiculos1" min="-2" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="79" max="-2" attributes="0"/>
                   <Component id="lblEscala1" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="67" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="53" max="-2" attributes="0"/>
                   <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace pref="68" max="32767" attributes="0"/>
+                  <EmptySpace pref="89" max="32767" attributes="0"/>
                   <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Component id="btnReducirZoom" min="-2" max="-2" attributes="0"/>
@@ -104,8 +101,8 @@
                           <Component id="btnReducirZoom" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="btnAumentarZoom" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="jLabel1" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="lblCantidadSemaforos1" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="lblCantidadVehiculos1" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="lblSemaforos1" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="lblVehiculos1" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="lblEscala1" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="jLabel2" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
@@ -190,7 +187,7 @@
             <Property name="text" type="java.lang.String" value="Zoom"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JLabel" name="lblCantidadSemaforos1">
+        <Component class="javax.swing.JLabel" name="lblSemaforos1">
           <Properties>
             <Property name="text" type="java.lang.String" value="#Semaforos : "/>
           </Properties>
@@ -198,7 +195,7 @@
             <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
           </AuxValues>
         </Component>
-        <Component class="javax.swing.JLabel" name="lblCantidadVehiculos1">
+        <Component class="javax.swing.JLabel" name="lblVehiculos1">
           <Properties>
             <Property name="text" type="java.lang.String" value="#Vehiculos :"/>
           </Properties>
@@ -216,7 +213,7 @@
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel2">
           <Properties>
-            <Property name="text" type="java.lang.String" value="V.Promedio :"/>
+            <Property name="text" type="java.lang.String" value="VPromedio:"/>
           </Properties>
         </Component>
       </SubComponents>
